<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/addBudgetDescription"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addbudgetOrigMoney"
        android:ems="10"
        android:hint="@string/display_budget_add_description"
        android:inputType="textShortMessage"
        android:padding="20dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/addBudgetName"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/enter_budget_name"
        android:inputType="textShortMessage"
        android:padding="20dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/addbudgetOrigMoney"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addBudgetName"
        android:ems="10"
        android:hint="@string/enter_original_money"
        android:inputType="numberDecimal"
        android:padding="20dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/okBudgetButton"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="37dp"
        android:background="@android:color/holo_orange_dark"
        android:onClick="respondToSave"
        android:text="@string/ok_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>