<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/addActivityName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:hint="@string/enter_activity_name"
        style="@style/Widget.AppCompat.EditText"
        android:inputType="textShortMessage"
        android:padding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/addActivityMoney"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/addActivityNote"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"
        android:inputType="textMultiLine"
        android:hint="@string/add_description"
        style="@style/Widget.AppCompat.EditText"
        android:padding="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/addActivityMoney"
        android:textAlignment="center"
        android:hint="@string/enter_money_added_spent"
        style="@style/Widget.AppCompat.EditText"
        android:layout_below="@+id/addActivityName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="20dp" />

    <Button
        android:id="@+id/okActivityButton"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_dark"
        android:onClick="respondToActivitySave"
        android:text="@string/ok_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>